// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LegacyDataTable /> Aligned DataTable should match the snapshot 1`] = `
<LegacyDataTable
  columns={
    Array [
      Object {
        "Header": "Name",
        "accessor": "name",
        "columnAlignment": "right",
        "headerAlignment": "right",
      },
      Object {
        "Header": "Age",
        "accessor": "age",
        "columnAlignment": "center",
        "headerAlignment": "center",
      },
    ]
  }
  data={
    Array [
      Object {
        "age": 26,
        "name": "Tanner Linsley",
      },
      Object {
        "age": 23,
        "name": "Jason Maurer",
      },
    ]
  }
  defaultSorted={Array []}
  showPagination={false}
  showSearchFilter={false}
  showVerticalLines={false}
  sortable={false}
  tableId="datatable"
>
  <ReactTable
    AggregatedComponent={[Function]}
    ExpanderComponent={[Function]}
    FilterComponent={[Function]}
    LoadingComponent={[Function]}
    NoDataComponent={[Function]}
    PadRowComponent={[Function]}
    PaginationComponent={[Function]}
    PivotValueComponent={[Function]}
    ResizerComponent={[Function]}
    TableComponent={[Function]}
    TbodyComponent={[Function]}
    TdComponent={[Function]}
    TfootComponent={[Function]}
    ThComponent={[Function]}
    TheadComponent={[Function]}
    TrComponent={[Function]}
    TrGroupComponent={[Function]}
    aggregatedKey="_aggregated"
    className="DataTable data-table-datatable"
    collapseOnDataChange={true}
    collapseOnPageChange={true}
    collapseOnSortingChange={true}
    column={
      Object {
        "Aggregated": undefined,
        "Cell": undefined,
        "Expander": undefined,
        "Filter": undefined,
        "Footer": undefined,
        "Header": undefined,
        "Pivot": undefined,
        "PivotValue": undefined,
        "aggregate": undefined,
        "className": "",
        "filterAll": false,
        "filterMethod": undefined,
        "filterable": undefined,
        "footerClassName": "",
        "footerStyle": Object {},
        "getFooterProps": [Function],
        "getHeaderProps": [Function],
        "getProps": [Function],
        "headerClassName": "",
        "headerStyle": Object {},
        "minWidth": 100,
        "resizable": undefined,
        "show": true,
        "sortMethod": undefined,
        "sortable": undefined,
        "style": Object {},
      }
    }
    columns={
      Array [
        Object {
          "Header": "Name",
          "accessor": "name",
          "className": "content-right",
          "columnAlignment": "right",
          "filterMethod": [Function],
          "headerAlignment": "right",
          "headerClassName": "content-right",
        },
        Object {
          "Header": "Age",
          "accessor": "age",
          "className": "content-center",
          "columnAlignment": "center",
          "filterMethod": [Function],
          "headerAlignment": "center",
          "headerClassName": "content-center",
        },
      ]
    }
    data={
      Array [
        Object {
          "age": 26,
          "name": "Tanner Linsley",
        },
        Object {
          "age": 23,
          "name": "Jason Maurer",
        },
      ]
    }
    defaultExpanded={Object {}}
    defaultFilterMethod={[Function]}
    defaultFiltered={Array []}
    defaultPageSize={25}
    defaultResized={Array []}
    defaultSortDesc={false}
    defaultSortMethod={[Function]}
    defaultSorted={Array []}
    expanderDefaults={
      Object {
        "filterable": false,
        "resizable": false,
        "sortable": false,
        "width": 35,
      }
    }
    filterable={false}
    freezeWhenExpanded={false}
    getLoadingProps={[Function]}
    getNoDataProps={[Function]}
    getPaginationProps={[Function]}
    getProps={[Function]}
    getResizerProps={[Function]}
    getTableProps={[Function]}
    getTbodyProps={[Function]}
    getTdProps={[Function]}
    getTfootProps={[Function]}
    getTfootTdProps={[Function]}
    getTfootTrProps={[Function]}
    getTheadFilterProps={[Function]}
    getTheadFilterThProps={[Function]}
    getTheadFilterTrProps={[Function]}
    getTheadGroupProps={[Function]}
    getTheadGroupThProps={[Function]}
    getTheadGroupTrProps={[Function]}
    getTheadProps={[Function]}
    getTheadThProps={[Function]}
    getTheadTrProps={[Function]}
    getTrGroupProps={[Function]}
    getTrProps={[Function]}
    groupedByPivotKey="_groupedByPivot"
    indexKey="_index"
    loading={false}
    loadingText="Loading..."
    minRows={0}
    multiSort={true}
    nestingLevelKey="_nestingLevel"
    nextText="Next"
    noDataText="No rows found"
    ofText="of"
    onFetchData={[Function]}
    originalKey="_original"
    pageSize={2}
    pageSizeOptions={
      Array [
        10,
        25,
        50,
        100,
      ]
    }
    pageText="Page"
    pivotDefaults={Object {}}
    pivotIDKey="_pivotID"
    pivotValKey="_pivotVal"
    previousText="Previous"
    resizable={false}
    resolveData={[Function]}
    rowsText="rows"
    showPageJump={true}
    showPageSizeOptions={false}
    showPagination={false}
    showPaginationBottom={true}
    showPaginationTop={true}
    sortable={false}
    style={Object {}}
    subRowsKey="_subRows"
  >
    <div
      className="ReactTable DataTable data-table-datatable"
      style={Object {}}
    >
      <TableComponent
        className=""
      >
        <div
          className="rt-table"
          role="grid"
        >
          <Thead
            className="-header"
            style={
              Object {
                "minWidth": "200px",
              }
            }
          >
            <div
              className="rt-thead -header"
              style={
                Object {
                  "minWidth": "200px",
                }
              }
            >
              <TrComponent>
                <div
                  className="rt-tr"
                  role="row"
                >
                  <ThComponent
                    className="content-right"
                    key="0-name"
                    style={
                      Object {
                        "flex": "100 0 auto",
                        "maxWidth": null,
                        "width": "100px",
                      }
                    }
                    toggleSort={[Function]}
                  >
                    <div
                      className="rt-th content-right"
                      onClick={[Function]}
                      role="columnheader"
                      style={
                        Object {
                          "flex": "100 0 auto",
                          "maxWidth": null,
                          "width": "100px",
                        }
                      }
                      tabIndex="-1"
                    >
                      <div
                        className=""
                      >
                        Name
                      </div>
                    </div>
                  </ThComponent>
                  <ThComponent
                    className="content-center"
                    key="1-age"
                    style={
                      Object {
                        "flex": "100 0 auto",
                        "maxWidth": null,
                        "width": "100px",
                      }
                    }
                    toggleSort={[Function]}
                  >
                    <div
                      className="rt-th content-center"
                      onClick={[Function]}
                      role="columnheader"
                      style={
                        Object {
                          "flex": "100 0 auto",
                          "maxWidth": null,
                          "width": "100px",
                        }
                      }
                      tabIndex="-1"
                    >
                      <div
                        className=""
                      >
                        Age
                      </div>
                    </div>
                  </ThComponent>
                </div>
              </TrComponent>
            </div>
          </Thead>
          <Tbody
            className=""
            style={
              Object {
                "minWidth": "200px",
              }
            }
          >
            <div
              className="rt-tbody"
              style={
                Object {
                  "minWidth": "200px",
                }
              }
            >
              <TrGroupComponent
                key="0"
              >
                <div
                  className="rt-tr-group"
                  role="rowgroup"
                >
                  <TrComponent
                    className="-odd"
                  >
                    <div
                      className="rt-tr -odd"
                      role="row"
                    >
                      <TdComponent
                        className="content-right"
                        key="0-name"
                        onClick={[Function]}
                        style={
                          Object {
                            "flex": "100 0 auto",
                            "maxWidth": null,
                            "width": "100px",
                          }
                        }
                      >
                        <div
                          className="rt-td content-right"
                          onClick={[Function]}
                          role="gridcell"
                          style={
                            Object {
                              "flex": "100 0 auto",
                              "maxWidth": null,
                              "width": "100px",
                            }
                          }
                        >
                          Tanner Linsley
                        </div>
                      </TdComponent>
                      <TdComponent
                        className="content-center"
                        key="1-age"
                        onClick={[Function]}
                        style={
                          Object {
                            "flex": "100 0 auto",
                            "maxWidth": null,
                            "width": "100px",
                          }
                        }
                      >
                        <div
                          className="rt-td content-center"
                          onClick={[Function]}
                          role="gridcell"
                          style={
                            Object {
                              "flex": "100 0 auto",
                              "maxWidth": null,
                              "width": "100px",
                            }
                          }
                        >
                          26
                        </div>
                      </TdComponent>
                    </div>
                  </TrComponent>
                </div>
              </TrGroupComponent>
              <TrGroupComponent
                key="1"
              >
                <div
                  className="rt-tr-group"
                  role="rowgroup"
                >
                  <TrComponent
                    className="-even"
                  >
                    <div
                      className="rt-tr -even"
                      role="row"
                    >
                      <TdComponent
                        className="content-right"
                        key="0-name"
                        onClick={[Function]}
                        style={
                          Object {
                            "flex": "100 0 auto",
                            "maxWidth": null,
                            "width": "100px",
                          }
                        }
                      >
                        <div
                          className="rt-td content-right"
                          onClick={[Function]}
                          role="gridcell"
                          style={
                            Object {
                              "flex": "100 0 auto",
                              "maxWidth": null,
                              "width": "100px",
                            }
                          }
                        >
                          Jason Maurer
                        </div>
                      </TdComponent>
                      <TdComponent
                        className="content-center"
                        key="1-age"
                        onClick={[Function]}
                        style={
                          Object {
                            "flex": "100 0 auto",
                            "maxWidth": null,
                            "width": "100px",
                          }
                        }
                      >
                        <div
                          className="rt-td content-center"
                          onClick={[Function]}
                          role="gridcell"
                          style={
                            Object {
                              "flex": "100 0 auto",
                              "maxWidth": null,
                              "width": "100px",
                            }
                          }
                        >
                          23
                        </div>
                      </TdComponent>
                    </div>
                  </TrComponent>
                </div>
              </TrGroupComponent>
            </div>
          </Tbody>
        </div>
      </TableComponent>
      <LoadingComponent
        loading={false}
        loadingText="Loading..."
      >
        <div
          className="-loading"
        >
          <div
            className="-loading-inner"
          >
            Loading...
          </div>
        </div>
      </LoadingComponent>
    </div>
  </ReactTable>
</LegacyDataTable>
`;

exports[`<LegacyDataTable /> Basic DataTable should match the snapshot 1`] = `
<LegacyDataTable
  columns={
    Array [
      Object {
        "Header": "Name",
        "accessor": "name",
      },
      Object {
        "Header": "Age",
        "accessor": "age",
      },
    ]
  }
  data={
    Array [
      Object {
        "age": 26,
        "name": "Tanner Linsley",
      },
      Object {
        "age": 23,
        "name": "Jason Maurer",
      },
    ]
  }
  defaultSorted={Array []}
  showPagination={false}
  showSearchFilter={false}
  showVerticalLines={false}
  sortable={false}
  tableId="datatable"
>
  <ReactTable
    AggregatedComponent={[Function]}
    ExpanderComponent={[Function]}
    FilterComponent={[Function]}
    LoadingComponent={[Function]}
    NoDataComponent={[Function]}
    PadRowComponent={[Function]}
    PaginationComponent={[Function]}
    PivotValueComponent={[Function]}
    ResizerComponent={[Function]}
    TableComponent={[Function]}
    TbodyComponent={[Function]}
    TdComponent={[Function]}
    TfootComponent={[Function]}
    ThComponent={[Function]}
    TheadComponent={[Function]}
    TrComponent={[Function]}
    TrGroupComponent={[Function]}
    aggregatedKey="_aggregated"
    className="DataTable data-table-datatable"
    collapseOnDataChange={true}
    collapseOnPageChange={true}
    collapseOnSortingChange={true}
    column={
      Object {
        "Aggregated": undefined,
        "Cell": undefined,
        "Expander": undefined,
        "Filter": undefined,
        "Footer": undefined,
        "Header": undefined,
        "Pivot": undefined,
        "PivotValue": undefined,
        "aggregate": undefined,
        "className": "",
        "filterAll": false,
        "filterMethod": undefined,
        "filterable": undefined,
        "footerClassName": "",
        "footerStyle": Object {},
        "getFooterProps": [Function],
        "getHeaderProps": [Function],
        "getProps": [Function],
        "headerClassName": "",
        "headerStyle": Object {},
        "minWidth": 100,
        "resizable": undefined,
        "show": true,
        "sortMethod": undefined,
        "sortable": undefined,
        "style": Object {},
      }
    }
    columns={
      Array [
        Object {
          "Header": "Name",
          "accessor": "name",
          "className": "",
          "filterMethod": [Function],
          "headerClassName": "",
        },
        Object {
          "Header": "Age",
          "accessor": "age",
          "className": "",
          "filterMethod": [Function],
          "headerClassName": "",
        },
      ]
    }
    data={
      Array [
        Object {
          "age": 26,
          "name": "Tanner Linsley",
        },
        Object {
          "age": 23,
          "name": "Jason Maurer",
        },
      ]
    }
    defaultExpanded={Object {}}
    defaultFilterMethod={[Function]}
    defaultFiltered={Array []}
    defaultPageSize={25}
    defaultResized={Array []}
    defaultSortDesc={false}
    defaultSortMethod={[Function]}
    defaultSorted={Array []}
    expanderDefaults={
      Object {
        "filterable": false,
        "resizable": false,
        "sortable": false,
        "width": 35,
      }
    }
    filterable={false}
    freezeWhenExpanded={false}
    getLoadingProps={[Function]}
    getNoDataProps={[Function]}
    getPaginationProps={[Function]}
    getProps={[Function]}
    getResizerProps={[Function]}
    getTableProps={[Function]}
    getTbodyProps={[Function]}
    getTdProps={[Function]}
    getTfootProps={[Function]}
    getTfootTdProps={[Function]}
    getTfootTrProps={[Function]}
    getTheadFilterProps={[Function]}
    getTheadFilterThProps={[Function]}
    getTheadFilterTrProps={[Function]}
    getTheadGroupProps={[Function]}
    getTheadGroupThProps={[Function]}
    getTheadGroupTrProps={[Function]}
    getTheadProps={[Function]}
    getTheadThProps={[Function]}
    getTheadTrProps={[Function]}
    getTrGroupProps={[Function]}
    getTrProps={[Function]}
    groupedByPivotKey="_groupedByPivot"
    indexKey="_index"
    loading={false}
    loadingText="Loading..."
    minRows={0}
    multiSort={true}
    nestingLevelKey="_nestingLevel"
    nextText="Next"
    noDataText="No rows found"
    ofText="of"
    onFetchData={[Function]}
    originalKey="_original"
    pageSize={2}
    pageSizeOptions={
      Array [
        10,
        25,
        50,
        100,
      ]
    }
    pageText="Page"
    pivotDefaults={Object {}}
    pivotIDKey="_pivotID"
    pivotValKey="_pivotVal"
    previousText="Previous"
    resizable={false}
    resolveData={[Function]}
    rowsText="rows"
    showPageJump={true}
    showPageSizeOptions={false}
    showPagination={false}
    showPaginationBottom={true}
    showPaginationTop={true}
    sortable={false}
    style={Object {}}
    subRowsKey="_subRows"
  >
    <div
      className="ReactTable DataTable data-table-datatable"
      style={Object {}}
    >
      <TableComponent
        className=""
      >
        <div
          className="rt-table"
          role="grid"
        >
          <Thead
            className="-header"
            style={
              Object {
                "minWidth": "200px",
              }
            }
          >
            <div
              className="rt-thead -header"
              style={
                Object {
                  "minWidth": "200px",
                }
              }
            >
              <TrComponent>
                <div
                  className="rt-tr"
                  role="row"
                >
                  <ThComponent
                    className=""
                    key="0-name"
                    style={
                      Object {
                        "flex": "100 0 auto",
                        "maxWidth": null,
                        "width": "100px",
                      }
                    }
                    toggleSort={[Function]}
                  >
                    <div
                      className="rt-th"
                      onClick={[Function]}
                      role="columnheader"
                      style={
                        Object {
                          "flex": "100 0 auto",
                          "maxWidth": null,
                          "width": "100px",
                        }
                      }
                      tabIndex="-1"
                    >
                      <div
                        className=""
                      >
                        Name
                      </div>
                    </div>
                  </ThComponent>
                  <ThComponent
                    className=""
                    key="1-age"
                    style={
                      Object {
                        "flex": "100 0 auto",
                        "maxWidth": null,
                        "width": "100px",
                      }
                    }
                    toggleSort={[Function]}
                  >
                    <div
                      className="rt-th"
                      onClick={[Function]}
                      role="columnheader"
                      style={
                        Object {
                          "flex": "100 0 auto",
                          "maxWidth": null,
                          "width": "100px",
                        }
                      }
                      tabIndex="-1"
                    >
                      <div
                        className=""
                      >
                        Age
                      </div>
                    </div>
                  </ThComponent>
                </div>
              </TrComponent>
            </div>
          </Thead>
          <Tbody
            className=""
            style={
              Object {
                "minWidth": "200px",
              }
            }
          >
            <div
              className="rt-tbody"
              style={
                Object {
                  "minWidth": "200px",
                }
              }
            >
              <TrGroupComponent
                key="0"
              >
                <div
                  className="rt-tr-group"
                  role="rowgroup"
                >
                  <TrComponent
                    className="-odd"
                  >
                    <div
                      className="rt-tr -odd"
                      role="row"
                    >
                      <TdComponent
                        className=""
                        key="0-name"
                        onClick={[Function]}
                        style={
                          Object {
                            "flex": "100 0 auto",
                            "maxWidth": null,
                            "width": "100px",
                          }
                        }
                      >
                        <div
                          className="rt-td"
                          onClick={[Function]}
                          role="gridcell"
                          style={
                            Object {
                              "flex": "100 0 auto",
                              "maxWidth": null,
                              "width": "100px",
                            }
                          }
                        >
                          Tanner Linsley
                        </div>
                      </TdComponent>
                      <TdComponent
                        className=""
                        key="1-age"
                        onClick={[Function]}
                        style={
                          Object {
                            "flex": "100 0 auto",
                            "maxWidth": null,
                            "width": "100px",
                          }
                        }
                      >
                        <div
                          className="rt-td"
                          onClick={[Function]}
                          role="gridcell"
                          style={
                            Object {
                              "flex": "100 0 auto",
                              "maxWidth": null,
                              "width": "100px",
                            }
                          }
                        >
                          26
                        </div>
                      </TdComponent>
                    </div>
                  </TrComponent>
                </div>
              </TrGroupComponent>
              <TrGroupComponent
                key="1"
              >
                <div
                  className="rt-tr-group"
                  role="rowgroup"
                >
                  <TrComponent
                    className="-even"
                  >
                    <div
                      className="rt-tr -even"
                      role="row"
                    >
                      <TdComponent
                        className=""
                        key="0-name"
                        onClick={[Function]}
                        style={
                          Object {
                            "flex": "100 0 auto",
                            "maxWidth": null,
                            "width": "100px",
                          }
                        }
                      >
                        <div
                          className="rt-td"
                          onClick={[Function]}
                          role="gridcell"
                          style={
                            Object {
                              "flex": "100 0 auto",
                              "maxWidth": null,
                              "width": "100px",
                            }
                          }
                        >
                          Jason Maurer
                        </div>
                      </TdComponent>
                      <TdComponent
                        className=""
                        key="1-age"
                        onClick={[Function]}
                        style={
                          Object {
                            "flex": "100 0 auto",
                            "maxWidth": null,
                            "width": "100px",
                          }
                        }
                      >
                        <div
                          className="rt-td"
                          onClick={[Function]}
                          role="gridcell"
                          style={
                            Object {
                              "flex": "100 0 auto",
                              "maxWidth": null,
                              "width": "100px",
                            }
                          }
                        >
                          23
                        </div>
                      </TdComponent>
                    </div>
                  </TrComponent>
                </div>
              </TrGroupComponent>
            </div>
          </Tbody>
        </div>
      </TableComponent>
      <LoadingComponent
        loading={false}
        loadingText="Loading..."
      >
        <div
          className="-loading"
        >
          <div
            className="-loading-inner"
          >
            Loading...
          </div>
        </div>
      </LoadingComponent>
    </div>
  </ReactTable>
</LegacyDataTable>
`;
